@@ -1,3 +1,8 @@
+1998-01-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* TkExtra.m ([TkExtra -preInitWithArgc:argv:]): In 8.0-unoff, 
+	don't import everything, just the BLT features we really need.
+
 1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* InputWidget.[hm]: New method linkVariableInt:.
